# TRR-bot

./: .env.example  .gitignore  .replit  COMPREHENSIVE_BOT_COMMANDS.md  COPY_TO_LOCAL_PROJECT.md  DEPLOYMENT_FILES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STEPS.md  DEPLOY_TO_EXISTING_HEROKU.md  FINAL_BOT_SUMMARY.md  FINAL_DEPLOYMENT_COMMANDS.txt  FINAL_TRR_BOT_UPDATE.md  GITHUB_DEPLOYMENT.md  GITHUB_DEPLOY_COMMANDS.txt  HEROKU_DEPLOYMENT.md  HEROKU_DEPLOY_COMMANDS.txt  HEROKU_DEPLOY_INSTRUCTIONS.txt  PERMISSION_FIX.md  QUICK_DEPLOYMENT_COMMANDS.md  README.md  SERVER_SETUP_GUIDE.md  TRR_BOT_UPDATE_COMMANDS.txt  UPDATED_REQUIREMENTS.txt  app.json  autonomous_ai.db  backup_1037399271735054387_20250529_163059.json  backup_1037399271735054387_20250529_163603.json  backup_1037399271735054387_20250529_163703.json  backup_1037399271735054387_20250529_164406.json  backup_1037399271735054387_20250529_164507.json  backup_1037399271735054387_20250529_164739.json  backup_1037399271735054387_20250529_165239.json  backup_1037399271735054387_20250529_165912.json  bot_database.db  cognitive_memory.db  copy_reaction_roles.txt  deploy_instructions.txt  deploy_new_ai.txt  deploy_reaction_roles.md  (+21 more)
attached_assets/: Pasted--Features-Overview-Automatically-creates-a-server-info-category-and-a-welcome-leave-boost-text-cha-1748940532487.txt  Pasted-1-Generate-Promotional-Content-Use-the-OpenAI-API-GPT-4-or-GPT-4o-to-automatically-create-Ca-1748942326661.txt  Pasted-PS-C-Users-darea-Documents-TRR-bot-del-python-version-del-pyproject-toml-del-uv-lock--1748787708096.txt  (+16 more)
(+77 files in other folders)
